<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@drawable/shadow_bottom_dark"
                android:paddingHorizontal="16dp"
                android:paddingBottom="16dp"
                android:textSize="24sp"
                tools:text="Title" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="20dp"
                android:minHeight="20dp"
                android:stepSize="0.1"
                app:mrb_progressTint="@color/white"
                tools:rating="3.3" />

            <TextView
                android:id="@+id/ratingAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:text="@string/rating"
                android:textSize="14sp" />

        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/black"
            android:drawableTint="@color/white"
            android:paddingHorizontal="8dp"
            android:text="@string/add_to_watchlist"
            android:textAllCaps="true"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="0dp"
            app:icon="@drawable/baseline_add_24"
            app:iconSize="20sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textSize="14sp"
            tools:text="@string/batman_desc" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/topTab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            android:elevation="1dp"
            app:tabIndicator="@drawable/tab_indicator"
            app:tabIndicatorFullWidth="true"
            app:tabIndicatorHeight="2dp"
            app:tabMode="scrollable"
            app:tabSelectedTextColor="@color/white"
            app:tabTextAppearance="@style/CustomTabText"
            app:tabTextColor="@color/gray" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

    </LinearLayout>


</ScrollView>