<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.finalproject.presentation.view.ToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_top"
        android:elevation="1dp"
        app:drawable_end="@drawable/baseline_more_vert_24"
        app:drawable_start="@drawable/baseline_arrow_back_24" />

    <ImageView
        android:id="@+id/posterImage"
        android:layout_width="match_parent"
        android:layout_height="530dp"
        android:adjustViewBounds="true"
        android:elevation="0dp"
        android:scaleType="centerCrop"
        tools:src="@drawable/poster" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        app:indicatorColor="@color/orange" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="530dp"
                android:layout_gravity="bottom"
                android:elevation="1dp"
                android:gravity="bottom"
                android:paddingHorizontal="16dp"
                android:paddingBottom="16dp"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/shadow_bottom"
                android:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="@id/movieTitle" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/black"
                android:elevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieTitle" />

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:id="@+id/ratingbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:minWidth="20dp"
                android:minHeight="20dp"
                android:stepSize="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieTitle"
                app:mrb_progressTint="@color/white"
                tools:rating="3.3" />

            <TextView
                android:id="@+id/ratingAverage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="12dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/ratingbar"
                app:layout_constraintTop_toTopOf="@id/ratingbar"
                tools:text="@string/rating" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addToWatchListButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/black"
                android:drawableTint="@color/white"
                android:gravity="start|center_vertical"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="8dp"
                android:text="@string/add_to_watchlist"
                android:textAllCaps="true"
                android:textSize="12sp"
                android:textStyle="bold"
                app:cornerRadius="0dp"
                app:icon="@drawable/baseline_add_24"
                app:iconSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingbar" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/black"
                android:lineSpacingExtra="2sp"
                android:paddingHorizontal="16dp"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/addToWatchListButton"
                tools:text="@string/batman_desc" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/topTab"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/black"
                android:elevation="1dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:tabIndicator="@drawable/tab_indicator"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorHeight="2dp"
                app:tabMode="scrollable"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@style/CustomTabText"
                app:tabTextColor="@color/gray" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:paddingTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/topTab" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</FrameLayout>